--- a/index.html
+++ b/index.html
@@ -63,9 +63,9 @@
 
 <main class="container">
 
-  <div class="starter-template text-center py-5 px-3">
-    <h1>Bootstrap starter template</h1>
-    <p class="lead">Use this document as a way to quickly start any new project.<br> All you get is this text and a mostly barebones HTML document.</p>
+  <div class="text-center py-5 px-3">
+    <h1>Hello World!</h1>
+    <p class="lead">More to come later...</p>
   </div>
 
 </main><!-- /.container -->
