--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
   </head>
   <body>
     
-<nav class="navbar navbar-expand-md navbar-dark bg-dark fixed-top">
+<nav class="navbar navbar-expand-md navbar-dark bg-dark fixed-top justify-content-center">
   <div class="container-fluid">
     <a class="navbar-brand" href="https://hunterking.github.io/">hunterking.github.io</a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarsExampleDefault" aria-controls="navbarsExampleDefault" aria-expanded="false" aria-label="Toggle navigation">
@@ -53,10 +53,6 @@
           <a class="nav-link" href="blog/blog.html">Blog</a>
         </li>
       </ul>
-      <form class="d-flex">
-        <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-        <button class="btn btn-outline-success" type="submit">Search</button>
-      </form>
     </div>
   </div>
 </nav>
