add link to resume to index

--- a/index.html
+++ b/index.html
@@ -62,6 +62,7 @@
   <div class="text-center py-5 px-3">
     <h1>Hello World!</h1>
     <p class="lead">More to come later...</p>
+    <p class="lead"><a class="nav-link" href="resume.pdf">Resume</a></p>
   </div>
 
 </main><!-- /.container -->
